[wipac:cicd_setup_builder]
pypi_name = wipac-file-catalog
python_min = 3.6
keywords_spaced = metadata data warehouse archive L2 PFDST PFFilt PFRaw i3 simulation iceprod
package_paths = file_catalog

[options]
packages = find:
install_requires =
	coloredlogs
	ldap3
	motor
	pymongo
	requests
	requests-futures
	requests-toolbelt
	tornado
	wipac-rest-tools[telemetry]

[options.package_data]
* = py.typed

[bdist_wheel]
universal=1

[flake8]
ignore = E501
